Not corrected bg Responsive

--- a/frontend/campuslive/index.html
+++ b/frontend/campuslive/index.html
@@ -7,10 +7,23 @@
     <title>Unicode</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="index.css">
 
 
   </head>
   <body class = "poppins-regular bg-gray-900">
+    <div class="absolute top-0 left-0 w-full h-full overflow-hidden z-0">
+  <div class="absolute top-0 left-0 bg-blue-500/20 rounded-full blur-3xl -translate-x-1/2 -translate-y-1/2 animate-pulse large-screen-1 medium-screen-1 small-screen-1"></div>
+  <div
+    class="absolute bottom-0 right-0 bg-green-500/20 rounded-full blur-3xl translate-x-1/3 translate-y-1/3 animate-pulse large-screen-2 medium-screen-2 small-screen-2"
+    style="animationDelay: 1s;"
+  ></div>
+  <div
+    class="absolute top-1/2 right-1/4 bg-purple-500/20 rounded-full blur-3xl animate-pulse large-screen-3 medium-screen-3 small-screen-3"
+    style="animationDelay: 2s;"
+  ></div>
+</div>
+
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
